--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&family=Rubik:wght@400;500;600;700;800;900&display=swap');
 *,
 *::before,
 *::after {
@@ -8,7 +8,7 @@
 }
 
 * {
-  font-family: "Rubik", sans-serif;
+  font-family: 'Roboto', sans-serif;
   list-style: none;
   text-decoration: none;
 }
@@ -87,6 +87,41 @@ main {
   align-items: center;
   padding-top: 370px;
   padding-bottom: 300px;
+}
+
+.welcome {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.icon-wrapper .github-logo {
+  width: 200px;
+}
+
+.welcome-text {
+  font-size: 4em;
+  color: wheat;
+  margin-right: 20%;
+}
+
+.welcome p {
+  max-width:600px;
+  border-left: 3px solid whitesmoke;
+  padding-left:25px ;
+  color: whitesmoke;
+  font-size: 22px;
 }
 
 .wrapper {
