--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,7 @@
   list-style: none;
   text-decoration: none;
 }
-body {
-  background-image: linear-gradient(to right, #74ebd5 0%, #9face6 100%);
-}
+
 
 .navbar {
   position: absolute;
@@ -22,9 +20,9 @@ body {
   justify-content: space-between;
   align-items: center;
   display: flex;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  padding: 15px 25px;
+  padding: 30px;
   z-index: 10;
+  background-color:#fff;
 }
 
 .logo-nav {
@@ -43,7 +41,7 @@ body {
 .logo-nav h2 {
   text-transform: uppercase;
   font-weight: 800;
-  color: #fff;
+  color: #111111;
 }
 
 .navbar .btn .hamburger-btn {
@@ -59,7 +57,7 @@ body {
   padding: 10px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #fff;
+  color: #111111;
   border: 1px solid transparent;
 }
 
@@ -79,7 +77,6 @@ body {
 }
 
 main {
-  background-image: linear-gradient(to right, #74ebd5 0%, #9face6 100%);
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -96,6 +93,7 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)),url(./img/bg-portfolio.svg);
 }
 
 .icon-wrapper {
@@ -111,26 +109,51 @@ main {
 }
 
 .welcome-text {
-  font-size: 4em;
-  color: wheat;
-  margin-right: 20%;
+  font-size: 3.5em;
+  margin: 20px 0 40px 0;
+  text-align: center;
+  color: #111111;
+  text-transform: uppercase;
 }
 
 .welcome p {
   max-width:600px;
-  border-left: 3px solid whitesmoke;
-  padding-left:25px ;
-  color: whitesmoke;
+  color: #111111;
   font-size: 22px;
+  text-align: center;
 }
 
-.wrapper {
-  background-color: white;
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-  transition: 0.2s;
+.social-icons {
+  display: flex;
+  max-width: 900px;
+  
+}
+
+.social-icons ul {
+  display: flex;
+  padding: 35px;
+  justify-content: center;
+  align-items: center
+}
+
+.social-icons ul li {
+  margin-right: 40px;
+  width: 55px;
+  height: 55px;
+  background-color: #8050b9;
+  border-radius: 50%;
+  font-size: 30px;
+  text-align: center;
+  line-height: 55px;
+  transition: 0.3s;
+}
+
+.social-icons ul li:hover {
+transform: translateY(5px);
+}
+
+.social-icons ul i {
+  color: #fff;
 }
 
 .wrapper:hover {
@@ -242,19 +265,14 @@ main {
   color: #e44d26;
 }
 
-@media (max-width: 900px) {
-  .header .navbar .logo-nav {
-    font-size: 30px;
-  }
-  .header .navbar .links-nav {
-    font-size: 12px;
-  }
-}
+
 @media (max-width: 700px) {
  .navbar .btn .hamburger-btn {
     display: block;
-    z-index: 1;
-    
+    z-index: 1;  
+  }
+  .hamburger-btn i {
+    color: #111111;
   }
   
   .links-nav {
@@ -281,7 +299,8 @@ main {
     align-items: center;
   }
  .navbar {
-    padding: 0;
+    background-color: #fff;
+    padding: 40px;
  }
  .navbar .links-nav ul li {
         margin: 45px 0;
@@ -292,5 +311,25 @@ main {
     position: absolute;
     left: 20px;
     top: 20px;
-    z-index: 1;
  }
+
+ .welcome-text {
+  padding: 25px;
+ }
+
+ .welcome h2 {
+  font-size: 36px;
+  line-height: 60px;
+  font-weight: 900;
+ }
+
+ .welcome p {
+  text-align: center;
+  padding: 25px;
+}
+
+.social-icons ul {
+
+  margin-top: 20px;
+
+}
