--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,8 @@ main {
   display: flex;
   padding: 35px;
   justify-content: center;
-  align-items: center
+  align-items: center;
+  
 }
 
 .social-icons ul li {
@@ -146,6 +147,7 @@ main {
   text-align: center;
   line-height: 55px;
   transition: 0.3s;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
 
 .social-icons ul li:hover {
