fin du responsive

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
 
 /* NAVBAR  */
 .navbar {
-  position: absolute;
+  position: fixed;
   width: 100%;
   justify-content: space-between;
   align-items: center;
@@ -239,7 +239,7 @@
 }
 section .about-container {
   background-color: #fafafa;
-  padding: 9rem 0;
+  padding: 9rem 0 4rem 0;
 }
 
 section header .about-sec {
@@ -284,7 +284,8 @@ section header .about-sec {
 }
 @media screen and (max-width: 500px) {
   .about-sec p {
-    font-size: 1.1rem;
+    text-align: start;
+    font-size: 1rem;
   }
 }
 .skills-container {
@@ -306,7 +307,7 @@ section header .about-sec {
 }
 @media screen and (max-width: 500px) {
   .lets-fork {
-    max-width: 90%;
+    max-width: 96%;
   }
 }
 .lets-fork h3 {
@@ -318,12 +319,19 @@ section header .about-sec {
 @media screen and (max-width: 500px) {
   .lets-fork h3 {
     font-size: 1.6rem;
+    text-align: end;
+    margin-bottom: 0;
   }
 }
 .lets-fork p {
   line-height: 1.7;
   padding-bottom: 2rem;
   color: #666;
+}
+@media screen and (max-width: 500px) {
+  .lets-fork p {
+    text-align: end;
+  }
 }
 .btn-contact {
   padding: 1.2rem 4rem;
@@ -341,8 +349,11 @@ section header .about-sec {
     font-size: 1rem;
   }
 }
-.btn-contact-container {
-  margin-top: 2rem;
+@media screen and (max-width: 500px) {
+  .btn-contact-container {
+    display: flex;
+    justify-content: end;
+  }
 }
 
 .my-skills {
@@ -351,7 +362,7 @@ section header .about-sec {
 }
 @media screen and (max-width: 500px) {
   .my-skills {
-    margin-top: 6em;
+    margin-top: 9em;
     padding: 0;
   }
 }
@@ -365,6 +376,8 @@ section header .about-sec {
 @media screen and (max-width: 500px) {
   .my-skills h3 {
     font-size: 1.6rem;
+    margin-bottom: 0;
+    text-align: start;
   }
 }
 .skills {
@@ -380,8 +393,9 @@ section header .about-sec {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100vw;
+    width: 92%;
     justify-content: start;
+    padding: 0 0.8rem;
   }
 }
 .skills-skill {
@@ -394,6 +408,13 @@ section header .about-sec {
   background: rgba(153, 153, 153, 0.2);
   font-size: 1.3rem;
 }
+@media screen and (max-width: 500px) {
+  .skills-skill {
+    font-size: 1rem;
+    padding: 1rem 2rem;
+    font-weight: 500;
+  }
+}
 .projects-container {
   padding: 9rem 0 0 0;
   background-color: #ffffff;
@@ -404,6 +425,7 @@ section header .about-sec {
   justify-content: center;
   align-items: center;
 }
+
 .projects-sec h2 {
   text-align: center;
   text-transform: uppercase;
@@ -411,6 +433,11 @@ section header .about-sec {
   letter-spacing: 4px;
   font-weight: 800;
   padding-bottom: 20px;
+}
+@media screen and (max-width: 500px) {
+  .projects-sec h2 {
+    font-size: 2em;
+  }
 }
 .projects-sec .border {
   display: flex;
@@ -428,6 +455,13 @@ section header .about-sec {
   font-size: 1.3rem;
   margin: auto;
 }
+@media screen and (max-width: 500px) {
+  .projects-sec p {
+    font-size: 1em;
+    line-height: 1.6;
+    text-align: center;
+  }
+}
 
 .dopefolio {
   margin: 9rem 5rem 2rem 5rem;
@@ -435,9 +469,25 @@ section header .about-sec {
   grid-template-columns: 1.5fr 1fr;
   grid-gap: 5rem;
 }
+@media screen and (max-width: 500px) {
+  .dopefolio {
+    margin: 4rem 2rem 1rem 2rem;
+    grid-template-columns: 1fr;
+    grid-gap: 2rem;
+    margin-bottom: 4rem;
+  }
+}
 .dopefolio h3 {
   padding-bottom: 3rem;
   font-size: 2rem;
+}
+@media screen and (max-width: 500px) {
+  .dopefolio h3 {
+    text-align: center;
+    font-size: 1.6em;
+    padding-bottom: 1rem;
+    padding-top: 2rem;
+  }
 }
 
 .dopefolio img {
@@ -448,12 +498,31 @@ section header .about-sec {
     rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
     rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
+@media screen and (max-width: 500px) {
+  .dopefolio img {
+    margin: auto;
+  }
+}
 .dopefolio-comment p {
   line-height: 1.7;
   padding-bottom: 2rem;
   color: #666;
 }
+@media screen and (max-width: 500px) {
+  .dopefolio-comment p {
+    text-align: right;
+  }
+}
+.dopefolio-comment a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
 
+.btn-contact-container {
+  margin: 2rem auto;
+}
 .see-more {
   display: flex;
   flex-direction: column;
@@ -462,16 +531,36 @@ section header .about-sec {
   align-items: center;
   padding: 9rem 0;
 }
+@media screen and (max-width: 500px) {
+  .see-more {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5rem 3rem;
+  }
+}
 .see-more h3 {
   font-size: 2rem;
   color: #111;
   font-weight: 700;
   margin-bottom: 2rem;
 }
+
 .see-more p {
   line-height: 1.7;
   padding-bottom: 2rem;
   color: #666;
+}
+@media screen and (max-width: 500px) {
+  .see-more h3 {
+    font-size: 1.6rem;
+    margin: auto;
+    max-width: 50%;
+    text-align: center;
+  }
+  .see-more p {
+    text-align: center;
+  }
 }
 .see-more a {
   padding: 1.2rem 4rem;
@@ -483,6 +572,11 @@ section header .about-sec {
   font-weight: 700;
   border-radius: 5px;
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
+}
+@media screen and (max-width: 500px) {
+  .see-more a {
+    font-size: 1rem;
+  }
 }
 .contact-container {
   background: linear-gradient(
@@ -503,6 +597,11 @@ section header .about-sec {
 .main-container header {
   padding: 9rem 0;
 }
+@media screen and (max-width: 500px) {
+  .main-container header {
+    padding: 5rem 0 3rem 0;
+  }
+}
 .contact-text {
   text-align: center;
   text-transform: uppercase;
@@ -510,6 +609,11 @@ section header .about-sec {
   letter-spacing: 4px;
   font-weight: 800;
   padding-bottom: 20px;
+}
+@media screen and (max-width: 500px) {
+  .contact-text h2 {
+    font-size: 2em;
+  }
 }
 .contact-sec .border {
   display: flex;
@@ -530,39 +634,64 @@ section header .about-sec {
   font-size: 1.3rem;
   margin: auto;
 }
+@media screen and (max-width: 500px) {
+  .contact-sec p {
+    font-size: 1em;
+    line-height: 1.6;
+    text-align: center;
+  }
+}
 .form-container {
   box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
   background: #fff;
   padding: 4rem;
   margin-top: 6rem;
-  max-width: 80rem;
+  max-width: 50rem;
   text-align: right;
   width: 92%;
   border-radius: 5px;
   margin: 5rem auto 0 auto;
 }
+@media screen and (max-width: 500px) {
+  .form-container {
+    padding: 1rem;
+  }
+}
 .form-field {
   margin-bottom: 4rem;
+}
+@media screen and (max-width: 500px) {
+  .form-field {
+    margin-bottom: 2rem;
+  }
 }
 .form-label {
   color: #666;
   letter-spacing: 1px;
-  font-size: 1.2rem;
   font-weight: 700;
   margin-bottom: 1rem;
   display: block;
   text-align: left;
+}
+@media screen and (max-width: 500px) {
+  .form-label {
+    font-size: 0.8rem;
+  }
 }
 .form-input {
   color: #333;
   padding: 2rem;
   width: 100%;
   border: 1px solid #ebebeb;
-  font-size: 1.2rem;
   letter-spacing: 0;
   background: #f0f0f0;
   border-radius: 5px;
   font-weight: 600;
+}
+@media screen and (max-width: 500px) {
+  .form-input {
+    padding: 1rem;
+  }
 }
 .btn-form {
   border: none;
@@ -575,6 +704,12 @@ section header .about-sec {
   font-weight: 700;
   border-radius: 5px;
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
+}
+@media screen and (max-width: 500px) {
+  .btn-form {
+    padding: 1rem 2rem;
+    font-size: 1rem;
+  }
 }
 .footer {
   background: #000;
@@ -589,17 +724,43 @@ section header .about-sec {
   text-transform: uppercase;
   font-weight: 700;
 }
+@media screen and (max-width: 500px) {
+  .footer-title {
+    font-size: 1.2em;
+    text-align: start;
+  }
+}
 .top-footer {
   display: flex;
   justify-content: space-between;
   padding: 4rem 0;
 }
+@media screen and (max-width: 500px) {
+  .top-footer {
+    display: flex;
+    flex-direction: column;
+  }
+}
 .footer-row {
   padding: 0 2rem;
+}
+@media screen and (max-width: 500px) {
+  .footer-row {
+    padding: 0 1rem;
+  }
 }
 .footer-row-1 {
   order: 2;
   margin-right: 10px;
+}
+@media screen and (max-width: 500px) {
+  .footer-row-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-bottom: 3em;
+    order: 1;
+  }
 }
 .social-cont {
   padding-top: 1rem;
@@ -607,13 +768,32 @@ section header .about-sec {
   justify-content: space-evenly;
   font-size: 1.6em;
 }
+@media screen and (max-width: 500px) {
+  .social-cont {
+    font-size: 1.5rem;
+    justify-content: flex-start;
+  }
+}
 .footer-row-2 {
   order: 1;
   width: 40%;
 }
+@media screen and (max-width: 500px) {
+  .footer-row-2 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+}
 .footer-row-2 p {
   padding-top: 1.5rem;
   line-height: 1.6;
+}
+@media screen and (max-width: 500px) {
+  .footer-row-2 p {
+    text-align: start;
+    margin: 0;
+  }
 }
 .social-cont a {
   margin-right: 15px;
@@ -629,8 +809,24 @@ section header .about-sec {
   text-align: left;
   text-align: center;
 }
+@media screen and (max-width: 500px) {
+  .footer-bottom {
+    padding: ;
+  }
+}
 .footer-bottom a {
   text-decoration: underline;
   color: #fff;
   font-weight: 700;
+}
+@media screen and (max-width: 500px) {
+  h3 {
+    font-size: 1.6rem;
+    padding-bottom: 2rem;
+  }
+  p {
+    margin: auto;
+    text-align: center;
+    max-width: 92%;
+  }
 }
